[project]
name = "cintara-langgraph"
version = "0.1.0"
description = "LangGraph integration for Cintara Trust Control Plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.2.31",
]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cintara_langgraph"]
